@@ -870,6 +870,30 @@ static demux_plugin_t *open_plugin (demux_class_t *class_gen, xine_stream_t *str
   return &this->demux_plugin;
 }
 
+static const char *get_description (demux_class_t *this_gen) {
+  return "Flash Video file demux plugin";
+}
+
+static const char *get_identifier (demux_class_t *this_gen) {
+  return "FLV";
+}
+
+static const char *get_extensions (demux_class_t *this_gen) {
+  return "flv";
+}
+
+static const char *get_mimetypes (demux_class_t *this_gen) {
+  return "video/x-flv: flv: Flash video;"
+         "video/flv: flv: Flash video;"
+         "application/x-flash-video: flv: Flash video;";
+}
+
+static void class_dispose (demux_class_t *this_gen) {
+  demux_flv_class_t *this = (demux_flv_class_t *) this_gen;
+
+  free (this);
+}
+
 static void *init_plugin (xine_t *xine, void *data) {
   demux_flv_class_t     *this;
 
@@ -878,7 +902,9 @@ static void *init_plugin (xine_t *xine, void *data) {
   this->demux_class.open_plugin     = open_plugin;
   this->demux_class.description     = N_("Flash Video file demux plugin");
   this->demux_class.identifier      = "FLV";
-  this->demux_class.mimetypes       = "video/x-flv: flv: Flash video;";
+  this->demux_class.mimetypes       = "video/x-flv: flv: Flash video;"
+				      "video/flv: flv: Flash video;"
+				      "application/x-flash-video: flv: Flash video;";
   this->demux_class.extensions      = "flv";
   this->demux_class.dispose         = default_demux_class_dispose;
 
@@ -897,3 +923,4 @@ const plugin_info_t xine_plugin_info[] EXPORTED = {
   { PLUGIN_DEMUX, 27, "flashvideo", XINE_VERSION_CODE, &demux_info_flv, init_plugin },
   { PLUGIN_NONE, 0, "", 0, NULL, NULL }
 };
+
