@@ -83,6 +83,8 @@ xine-lib (1.1.9) (unreleased)
   * Enabled the WMV VC1 (ffmpeg) codec.
   * Fixed a crash that happened when a video output was closed
   * Made the Real demuxer recognise http references.
+  * Require correct URL encoding of '#'s which aren't separators.
+  * Don't decode %nn in raw filenames. [Bug 1784272]
 
 xine-lib (1.1.8)
   * Send a channel-changed event to the frontend when receiving the SYNC
